converted to general wiper code

--- a/firmware/output/tpl0401.htm
+++ b/firmware/output/tpl0401.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\output\tpl0401.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\output\tpl0401.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060422: Last Updated: Thu May 04 08:47:24 2017
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060422: Last Updated: Thu May 04 20:53:39 2017
 <BR><P>
 <H3>Maximum Stack Usage =        128 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -503,7 +503,7 @@ Global Symbols
 <P><STRONG><a name="[85]"></a>osMutexAcquire</STRONG> (Thumb, 36 bytes, Stack size 8 bytes, rtx_mutex.o(.text.osMutexAcquire))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = osMutexAcquire
 </UL>
-<BR>[Called By]<UL><LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;tpl0401_write
+<BR>[Called By]<UL><LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;wiper_write
 <LI><a href="#[3c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_mutex_acquire
 </UL>
 
@@ -523,7 +523,7 @@ Global Symbols
 <P><STRONG><a name="[88]"></a>osMutexRelease</STRONG> (Thumb, 36 bytes, Stack size 8 bytes, rtx_mutex.o(.text.osMutexRelease))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = osMutexRelease
 </UL>
-<BR>[Called By]<UL><LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;tpl0401_write
+<BR>[Called By]<UL><LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;wiper_write
 <LI><a href="#[3f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_mutex_release
 </UL>
 
@@ -1074,7 +1074,7 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osDelay
 </UL>
-<BR>[Called By]<UL><LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;tpl0401_write
+<BR>[Called By]<UL><LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;wiper_write
 </UL>
 
 <P><STRONG><a name="[8c]"></a>initGpio</STRONG> (Thumb, 232 bytes, Stack size 16 bytes, gpio.o(i.initGpio))
@@ -1180,29 +1180,29 @@ Global Symbols
 <BR>[Address Reference Count : 1]<UL><LI> main.o(i.main)
 </UL>
 <P><STRONG><a name="[3a]"></a>task_main</STRONG> (Thumb, 40 bytes, Stack size 0 bytes, main_task.o(i.task_main))
-<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = task_main &rArr; tpl0401_write &rArr; i2c_master_process &rArr; osDelay
+<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = task_main &rArr; wiper_write &rArr; i2c_master_process &rArr; osDelay
 </UL>
-<BR>[Calls]<UL><LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;tpl0401_write
+<BR>[Calls]<UL><LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;wiper_write
 <LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osDelay
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> main.o(i.main)
 </UL>
-<P><STRONG><a name="[a4]"></a>tpl0401_write</STRONG> (Thumb, 58 bytes, Stack size 16 bytes, tpl0401.o(i.tpl0401_write))
-<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = tpl0401_write &rArr; i2c_master_process &rArr; osDelay
-</UL>
-<BR>[Calls]<UL><LI><a href="#[88]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osMutexRelease
-<LI><a href="#[85]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osMutexAcquire
-<LI><a href="#[8a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;i2c_master_process
-</UL>
-<BR>[Called By]<UL><LI><a href="#[3a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;task_main
-</UL>
-
 <P><STRONG><a name="[9d]"></a>uartNvicConfig</STRONG> (Thumb, 38 bytes, Stack size 8 bytes, uart.o(i.uartNvicConfig))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = uartNvicConfig
 </UL>
 <BR>[Calls]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;NVIC_Init
 </UL>
 <BR>[Called By]<UL><LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
+</UL>
+
+<P><STRONG><a name="[a4]"></a>wiper_write</STRONG> (Thumb, 58 bytes, Stack size 16 bytes, wiper.o(i.wiper_write))
+<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = wiper_write &rArr; i2c_master_process &rArr; osDelay
+</UL>
+<BR>[Calls]<UL><LI><a href="#[88]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osMutexRelease
+<LI><a href="#[85]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osMutexAcquire
+<LI><a href="#[8a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;i2c_master_process
+</UL>
+<BR>[Called By]<UL><LI><a href="#[3a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;task_main
 </UL>
 <P>
 <H3>
